starting to add reviews

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,6 +27,8 @@
       Genre Ids: <%= result['genre_ids'] %>
       <br>
       Release Date: <%= result['release_date'] %>
+      <br>
+      <%= link_to 'Leave a Review', new_article_path %>
     </p>
   <% end %>
 
