sorting, not with genres yet

--- a/app/views/welcome/_movies.html.erb
+++ b/app/views/welcome/_movies.html.erb
@@ -5,9 +5,7 @@
       <br>
       Title: <%= movie.title %>
       <br>
-      External Id: <%= movie.external_id %>
-      <br>
-      Genre Ids: <%= movie.genre %>
+      Genre Id: <%= movie.genre %>
       <br>
       Release Date: <%= movie.release_date %>
       <br>
@@ -22,5 +20,4 @@
       <%= link_to 'Leave a Review', movie_path(movie) %>
     </p>
   <% end %>
-
 <% end %>
