search by genre

--- a/app/views/welcome/_movies.html.erb
+++ b/app/views/welcome/_movies.html.erb
@@ -5,7 +5,7 @@
       <br>
       Title: <%= movie.title %>
       <br>
-      Genre Id: <%= movie.genre %>
+      Genre: <%= movie.genre %>
       <br>
       Release Date: <%= movie.release_date %>
       <br>
