--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,6 +16,10 @@
     <%= form.submit "Sort By Release Date", name: "submit", value: "Sort By Release Date" %>
   </p>
 
+  <p>
+    <%= form.submit "Sort By Genre", name: "submit", value: "Sort By Genre" %>
+  </p>
+
 <% end %>
 
 
