a few simple model tests

--- a/app/views/welcome/create.js.erb
+++ b/app/views/welcome/create.js.erb
@@ -1,2 +1,2 @@
 
-$("#man").html("<%= escape_javascript(render partial: 'movies', locals: { movies: @movies } ) %>");
+$("#movie_results").html("<%= escape_javascript(render partial: 'movies', locals: { movies: @movies } ) %>");
