--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,16 +23,9 @@
 <% end %>
 
 
-<div id="man">
+<div id="movie_results">
 </div>
 
 
 <%= link_to 'View all Reviews', reviews_path %>
-
-
-
-
-
-
-
 
