--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#left {
+  width: 400px;
+  float: left;
+}
+#right {
+  margin-left: 400px;
+  /* Change this to whatever the width of your left column is*/
+}
+.clear {
+  clear: both;
+}
