factor star rating into partial; beginning of recent reviews

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -22,3 +22,8 @@
   margin-left: 100px;
   /* Change this to whatever the width of your left column is*/
 }
+#movie {
+  /*border: 1px solid black;*/
+  /*height: 138px;*/
+}
+
