--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,6 +24,15 @@
     </div>
   </div>
   <div id="right">
+    <h2>Recent Reviews</h2>
+    <% @recent_reviews.each do |recent_review| %>
+      "<%= recent_review.comment %>"
+      <%= render partial: "stars", locals: {rating: recent_review.rating} %>
+      <br>
+      <%= recent_review.movie.title %>
+      <br>
+    <% end %>
+    <br>
     <%= link_to 'View all Reviews', reviews_path %>
   </div>
   <div class="clear"></div>
