bit of styling for recent reviews

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -27,3 +27,17 @@
   /*height: 138px;*/
 }
 
+#recent_left {
+  width: 200px;
+  float: left;
+}
+#recent_right {
+  margin-left: 200px;
+  /* Change this to whatever the width of your left column is*/
+  margin-bottom: 30px;
+}
+
+#recent_movie_color {
+  color: grey;
+}
+
