--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <%= form_with model: @movie, remote: true do |form| %>
 
   <p>
-    <%= form.label :title, 'Search by Title' %><br>
+    <%= form.label :title, 'Search by Title' %>
     <%= form.text_field :title %>
   </p>
 
