--- a/app/views/welcome/_movies.html.erb
+++ b/app/views/welcome/_movies.html.erb
@@ -20,8 +20,7 @@
 
 	<% movie.reviews.each do |review| %>
 	  <%= render partial: "stars", locals: {rating: review.rating} %>
-          "<%= review.comment %>" -
-          <%= review.email %>
+          <%= render partial: "comment_and_email", locals: {review: review} %>
           <br>
         <% end %>
 
