simple choosing star rating by mousing over stars

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -52,7 +52,14 @@
 
   <p>
     <%= form.label :rating %>*<br>
-    <%= form.select :rating, ['', '1', '2', '3', '4', '5'] %>
+    <%= form.hidden_field :rating, id: 'rating' %>
+    <span id="stars">
+      <span id="star1">&star;</span>
+      <span id="star2">&star;</span>
+      <span id="star3">&star;</span>
+      <span id="star4">&star;</span>
+      <span id="star5">&star;</span>
+    </div>
   </p>
 
   <p>
